--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,13 @@
     --clr-card-bg: hsl(0 0% 100%);
     --clr-text: hsl(0 0% 15%);
     --clr-heading: hsl(0 0% 25%);
+    --clr-card-top: hsl(0 0% 25%);
     --clr-link: hsl(0 0% 25%);
     --clr-link-focus: hsl(0, 0%, 10%);
     --clr-test-red: red;
     --clr-test-lime: hsl(104, 76%, 47%);
     --clr-test-yellow: yellow;
+    /* Elegant Theme */
     --snow: #EFEDEE;
     --wheat: #9a5815;
     --forest: #272E22;
@@ -36,7 +38,7 @@ line-height: 1.1;
 
 a {
     text-decoration: none;
-    color: var(--clr-test-red);
+    color: var(--clr-link);
 }
 
 a:focus, a:hover {
@@ -71,7 +73,7 @@ margin-inline: auto;
 .card {
 padding: 1rem;
 background-color: var(--clr-card-bg);
-border-block-start: 0.5rem solid; /* make this the same as headings */
+border-block-start: 0.5rem solid var(--clr-card-top); /* make this the same as headings */
 border-radius: 0.5rem;
 }
 
@@ -168,6 +170,7 @@ background-color: var(--radio-color);
 --clr-body-bg: hsl(310 50% 90%);
 --clr-card-bg: hsl(310 50% 100%);
 --clr-text: hsl(310 50% 15%);
+--clr-card-top: hsl(310 50% 25%);
 --clr-heading: hsl(310 50% 25%);
 --clr-link: hsl(310, 53%, 32%);
 }
@@ -176,21 +179,27 @@ background-color: var(--radio-color);
 --clr-body-bg: hsl(209 50% 90%);
 --clr-card-bg: hsl(209 50% 100%);
 --clr-text: hsl(209 50% 15%);
+--clr-card-top: hsl(209 50% 25%);
 --clr-heading: hsl(209 50% 25%);
+--clr-link:hsl(209, 50%, 25%);
 }
 
 .green {
 --clr-body-bg: hsl(109 50% 90%);
 --clr-card-bg: hsl(109 50% 100%);
 --clr-text: hsl(109 50% 15%);
+--clr-card-top: hsl(109 50% 25%);
 --clr-heading: hsl(109 50% 25%);
+--clr-link: hsl(109, 50%, 25%);
 }
 
 .dark {
 --clr-body-bg: hsl(209 50% 10%);
 --clr-card-bg: hsl(209 50% 5%);
 --clr-text: hsl(209 50% 90%);
+--clr-card-top: hsl(209 50% 80%);
 --clr-heading: hsl(209 50% 80%);
+--clr-link: hsl(209, 50%, 80%);
 }
 
 /* Note: Elegant theme is from: https://github.com/aylinmarie/elegant-knit She's a wonderful UI Engineer and fibre artist!
@@ -204,14 +213,18 @@ background-color: var(--radio-color);
     --clr-card-bg: hsl(0, 0%, 100%);
     --clr-body-bg: hsl(0, 0%, 94%);
     --clr-text: hsl(95, 15%, 16%);
-    --clr-heading: hsl(30, 76%, 34%);
+    --clr-card-top:var(--wheat);
+    --clr-heading: var(--wheat);
+    --clr-link: var(--wheat);
 }
 
 .test {
     --clr-body-bg: hsl(310 50% 90%);
     --clr-card-bg: hsl(310 50% 25%);
     --clr-text: hsl(310 50% 75%);
+    --clr-card-top: hsl(310 50% 100%);
     --clr-heading: hsl(310 50% 100%);
+    --clr-link: hsl(310, 50%, 100%);
     }
 
 :root:has(#pink:checked) {
@@ -242,9 +255,16 @@ background-color: var(--radio-color);
 --clr-heading: hsl(209 50% 80%);
 }
 
+:root:has(#elegant:checked) {
+    --clr-body-bg: hsl(0, 0%, 94%);
+    --clr-card-bg: hsl(0, 0%, 100%);
+    --clr-text: hsl(95, 15%, 16%);
+    --clr-heading: var(--wheat);
+}
+
 :root:has(#test:checked) {
     --clr-body-bg: hsl(209 50% 10%);
     --clr-card-bg: hsl(209 50% 5%);
     --clr-text: hsl(209 50% 90%);
     --clr-heading: hsl(209 50% 80%);
-    }
+}
