--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,51 @@
+@font-face {
+    font-family: 'Royal Acidbath';
+    src: url(/assets/fonts/royal_acidbath/Royalacid_o.ttf);
+
+    font-family: 'Royal Acid';
+    src: url(/assets//fonts/royal_acidbath/Royalacid.ttf);
+}
+
 :root {
-    --clr-body-bg: hsl(0 0% 90%);
-    --clr-card-bg: hsl(0 0% 100%);
-    --clr-text: hsl(0 0% 15%);
-    --clr-heading: hsl(0 0% 25%);
-    --clr-card-top: hsl(0 0% 25%);
-    --clr-link: hsl(0 0% 25%);
-    --clr-link-focus: hsl(0, 0%, 10%);
+    /* Test colours */
+    
     --clr-test-red: red;
     --clr-test-lime: hsl(104, 76%, 47%);
     --clr-test-yellow: yellow;
+    --clr-test-blue: blue;
+    --ff-test-heading: 'Audiowide', cursive;
+    --ff-test-body: 'Send Flowers', cursive;
+
+    /* Default Light Grey Theme */
+    --clr-body-bg: hsl(0 0% 90%); 
+    --clr-card-bg: hsl(0 0% 100%);
+    --clr-text: hsl(0 0% 15%);
+    --clr-heading1: hsl(0 0% 25%);
+    --clr-heading: hsl(0 0% 25%);
+    --clr-tagline: var(--clr-test-blue);
+    --clr-card-top: hsl(0 0% 25%);
+    --clr-link: hsl(0 0% 25%);
+    --clr-link-focus: hsl(0, 0%, 10%);
+    --ff-heading: 'Audiowide', cursive;
+    --ff-tagline: 'Arial', sans;
+    --ff-body: 'Send Flowers', cursive;
+
+    /* Groovy Theme */
+    --groovy--clr-orange: hsl(29, 96%, 44%); /*DD6D05*/
+    --groovy--clr-pink: hsl(313, 97%, 35%); /*B1038B*/
+    --groovy--clr-white: hsl(0, 0%, 100%); /*FFFFFF*/
+    --groovy--clr-black:var(hsl(0, 0%, 0%)); /*000000*/
+    --groovy--ff-heading1: 'Royal Acidbath', cursive;
+    --groovy--ff-heading: 'Royal Acidbath', cursive;
+    --groovy--ff-tagline: 'Royal Acid', cursive;
+    --groovy--ff-body:'Familjen Grotesk', sans;
+
     /* Elegant Theme */
-    --snow: #EFEDEE;
-    --wheat: #9a5815;
-    --forest: #272E22;
-    --charcoal: #211C16;
+    --elegant--clr-snow: hsl(330, 6%, 93%); /*#EFEDEE*/
+    --elegant--clr-wheat: hsl(30, 76%, 34%); /*#9a5815*/
+    --elegant--clr-forest: hsl(95, 15%, 16%); /*#272E22*/
+    --elegant--clr-charcoal: hsl(33, 20%, 11%); /*#211C16*/
+    
 }
 
 /* ------------------ */
@@ -21,19 +53,33 @@
 /* ------------------ */
 
 body {
-margin: 0;
-font-family: system-ui, sans-serif;
-font-size: 1.25rem;
-line-height: 1.5;
-background: var(--clr-body-bg);
-color: var(--clr-text);
+    margin: 0;
+    font-family: var(--ff-body);
+    font-size: 1.25rem;
+    line-height: 1.5;
+    background: var(--clr-body-bg);
+    color: var(--clr-text);
 }
 
+h1 {
+    font-family: var(--ff-heading1);
+    color: var(--clr-heading1);
+}
+h2, h3 {
+    font-family: var(--ff-heading);
+    color: var(--clr-heading);
+}
 h1,
 h2,
 h3 {
-color: var(--clr-heading);
-line-height: 1.1;
+    line-height: 1.1;
+}
+
+.tagline {
+    font-family: var(--ff-tagline);
+    color: var(--clr-tagline);
+    font-size: 1.5rem;
+    line-height: 1.1;
 }
 
 a {
@@ -153,6 +199,10 @@ background-color: var(--radio-color);
     --radio-color: #9a5815;
     }
 
+.color-picker input[type="radio"]#groovy {
+    --radio-color: var(--groovy--clr-orange);
+    }
+
 
 /* -- Individual Themes -- */
 
@@ -163,6 +213,21 @@ background-color: var(--radio-color);
     --clr-card-top:var(--wheat);
     --clr-heading: var(--wheat);
     --clr-link: var(--wheat);
+}
+
+.groovy {
+    --clr-card-bg: var(--groovy--clr-white);
+    --clr-body-bg: var(--groovy--clr-orange);
+    --clr-text: hsl(95, 15%, 16%);
+    --clr-card-top:var(--groovy--clr-pink);
+    --clr-heading1: var(--groovy--clr-white);
+    --clr-heading: var(--groovy--clr-pink);
+    --clr-tagline: var(--groovy--clr-black);
+    --clr-link: var(--groovy--clr-pink);
+    --ff-heading1: var(--groovy--ff-heading1);
+    --ff-heading: var(--groovy--ff-heading);
+    --ff-tagline: var(--groovy--ff-tagline);
+    --ff-body: var(--groovy--ff-body);
 }
 
 :root:has(#elegant:checked) {
