--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@
     --clr-card-top: hsl(0 0% 25%);
     --clr-link: hsl(0 0% 25%);
     --clr-link-focus: hsl(0, 0%, 10%);
+    --ff-code: 'Ubuntu Mono', monospace;
     --ff-heading: 'Audiowide', cursive;
     --ff-tagline: 'Arial', sans;
     --ff-body: 'Send Flowers', cursive;
@@ -75,6 +76,11 @@ h3 {
     line-height: 1.1;
 }
 
+blockquote {
+    color: var(--ff-code);
+    font-style: italic;
+}
+
 .tagline {
     font-family: var(--ff-tagline);
     color: var(--clr-tagline);
@@ -116,6 +122,53 @@ width: min(100% - 2rem, var(--max-width));
 margin-inline: auto;
 }
 
+.hero {
+    width: 100vw;
+    height: 90vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    /* Background styles */
+    background-image: url(/assets/hero-medium.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.hero h1 {
+    /* Text styles */
+    font-size: 5em;
+    margin-top: 0;
+    margin-bottom: 0.5em;
+}
+
+.hero--inner {
+    background-color: #D1CDCD;
+    padding: 2rem;
+    margin: 2rem;
+    border-radius: 1.25rem;
+    max-width: 80vw;
+}
+
+.hero--inner-title {
+    background-color: var(--groovy--clr-orange);
+    padding: 1.25rem;
+    border-radius: 1.25rem;
+    border: 4px solid var(--groovy--clr-pink);
+}
+
+
+.btn {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    border: 2px solid var(--clr-test-red);
+    border-radius: 10px;
+}
+
 .card {
 padding: 1rem;
 background-color: var(--clr-card-bg);
@@ -133,7 +186,6 @@ margin: 0;
 .card > *:not(:last-child) {
 margin-bottom: 0.75rem;
 }
-
 /* --- Utility Classes --- */
 
 .emphasis--fw-600 {
